# cellular-automata-bevy-rust

./: Cargo.toml
src/: main.rs
