[package]
name = "cellular-automata-bevy-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_pixel_buffer = "0.5"
rand = "0.8"

[dependencies.bevy]
version = "0.11"
default_features = false
features = [
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_asset",
    "bevy_sprite",
    "png",
]
